--- a/Workbooks/Figure4.Rmd
+++ b/Workbooks/Figure4.Rmd
@@ -15,33 +15,62 @@ UMAP split by iPSC line (genetic background)
 
 
 ```{r}
+require(CelltypeR)
 require(Seurat)
 require(tidyverse)
-require(CelltypeR)
 
 ```
 #Annotation of clusters
 
 Read in the seurat object. The data was prepared following the CelltypeR workflow but run in HPC. 
 
-```{r}
+```{r, fig.width=6}
 
-seu.q <- readRDS("/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/Analysis/NatMethodJuneSubmission/Figure4/All9MOannaoteAug.RDS")
+#seu.q <- readRDS("AllhMOcells.RDS")
+
 
 AB <- c("CD24","CD56","CD29","CD15","CD184","CD133","CD71","CD44","GLAST","AQP4","HepaCAM", "CD140a","O4")
 
+ 
+seu.q <- RunUMAP(seu.q, n.neighbors = 30, b = 0.62, a = 0.62, spread = 5, dims = 1:11) 
+
+DimPlot(seu.q, group.by = "clusters", raster = FALSE, label = TRUE, shuffle = TRUE, pt.size = 0.01)
+Idents(seu.q) <- "clusters"
+
+dp1 <- DimPlot(seu.q, group.by = "clusters", raster = FALSE, label = TRUE, shuffle = TRUE, pt.size = 0.01, repel = TRUE)
+dp1
 
 ```
+save the clusters
+
+```{r}
+
+png("UMAPclusterlableAllS12leg.png", width = 1000, height = 300)
+dp1 + theme(legend.position = "bottom")  # Set legend position to bottom
+dev.off()
+```
+
 
 
 Visualize marker expression
-```{r}
+```{r, fig.width=6}
 Idents(seu.q)<- 'RNA_snn_res.1.5'
 for (i in AB) {
-  print(FeaturePlot(seu.q, features = i, min.cutoff = 'q1', max.cutoff = 'q97', label = TRUE, raster = FALSE))
+  print(FeaturePlot(seu.q, features = i, min.cutoff = 'q2', max.cutoff = 'q99', label = TRUE, raster = FALSE))
 }
 
 ```
+
+Save the feature plots
+```{r}
+png("FeaturePlotsUMAP_allcellsS12.png", width = 1400, height = 600)
+FeaturePlot(seu.q, features = AB, min.cutoff = 'q1', max.cutoff = 'q97', label = FALSE, ncol = 5, raster = FALSE)
+dev.off()
+
+
+```
+
+
 
 
 Heatmap of marker expression by cluster
@@ -142,7 +171,7 @@ dev.off()
 
 Filter again but keep unassigned
 
-```{r}
+```{r, fig.width=8}
 Idents(seu.q) <- 'cor.labels1'
 # filter cell types less than 500 cells and filter out unassigned from the 0.35 threshold with 0.005 double cell threshold
 thresh = 500
@@ -158,7 +187,7 @@ cell.order <- as.character(keep$Var1)
 #filter.out <- c(as.character(df.ft$Var1),"unassigned")
 seu.sub <- subset(seu.q, ident = cell.order, invert = FALSE)
 
-DimPlot(seu.sub, order = rev(cell.order), raster = FALSE)
+DimPlot(seu.sub, order = rev(cell.order), raster = FALSE, label = TRUE, repel = TRUE)
 
 #png("AllcellsUMAPCorlablesfilteredLB2.png", width = 950, height = 400)
 #DimPlot(seu.sub, order = rev(cell.order), raster = FALSE, group.by = "cor.labels1", label = TRUE, repel = TRUE, label.size = 5.5)+ theme_classic(base_size = 20)
@@ -169,9 +198,28 @@ DimPlot(seu.sub, order = rev(cell.order), raster = FALSE)
 # plot_lab_clust(seu.sub, seu.sub$clusters, seu.sub$cor.labels1, filter_out = "unassigned")
 # dev.off()
  
- plot_lab_clust(seu.sub, seu.sub$clusters, seu.sub$cor.labels1, filter_out = "unassigned")
+ #plot_lab_clust(seu.sub, seu.sub$clusters, seu.sub$cor.labels1, filter_out = "unassigned")
+
+
+
+
 
 ```
+
+save the CAM predictions
+
+```{r}
+png("UMAP_CAM_All_S13.png", width = 1000, height = 350)
+DimPlot(seu.sub, order = rev(cell.order), raster = FALSE, label = TRUE, pt.size = 0.001, shuffle = TRUE, repel = TRUE, label.size = 6) +
+  theme(legend.text = element_text(size=16), axis.title.y = element_text(size=16), 
+         axis.title.x = element_text(size=16), axis.text.y = element_text(size =16),
+        axis.text.x = element_text(size =16))
+dev.off()
+```
+
+
+
+
 
 Get a table of the top predictions
 ```{r}
@@ -192,7 +240,7 @@ Add the annotations from the correlation prediction
 ```{r}
 seu.q <- CelltypeR::annotate(seu.q,annotations = cor.ann.035$CAM, to_label= "RNA_snn_res.1.5", annotation_name = "CAM")
 
-DimPlot(seu.q, group.by = "CAM", raster = FALSE, label = TRUE)
+DimPlot(seu.q, group.by = "CAM", raster = FALSE, label = TRUE, pt.size = 0.1)
 ```
 
 
@@ -230,9 +278,9 @@ seu.q$rfm.sort <- factor(seu.q$rfm.sort, levels = sorted)
  plot_lab_clust(seu.q, seu.q$clusters, seu.q$rfm.sort, filter_out = c( "Unassigned","Mixed"))
  dev.off()
  
-png("UMAPRFMpredictions.png", width = 800, height = 400)
+png("UMAPRFMpredictionsAll_S13.png", width = 800, height = 400)
 DimPlot(seu.q, group.by = "rfm.pred", raster = FALSE,  label = TRUE, 
-        repel = TRUE, label.size = 5.5,
+        repel = TRUE, label.size = 4,
         order = rev(sorted)) + theme_classic(base_size = 20)
  dev.off()
  
@@ -265,11 +313,42 @@ write.csv(sort.tops,"RFMtop5predNew.csv")
 ```
 Add annotation from the RFM predictions
 
-```{r}
-seu.q <- annotate(seu.q, annotations = rfm.ann$RFM, to_label= "RNA_snn_res.1.5", annotation_name = "RFM")
+```{r, fig.width=6}
+#seu.q <- annotate(seu.q, annotations = rfm.ann$RFM, to_label= "RNA_snn_res.1.5", annotation_name = "RFM")
 
-DimPlot(seu.q, group.by = "RFM", raster = FALSE, label = TRUE)
+DimPlot(seu.q, group.by = "RFM", raster = FALSE, label = TRUE, pt.size = 0.1)
 ```
+
+```{r}
+
+cell.types <- as.data.frame(table(seu.q$rfm.pred))
+filtered_df <- subset(cell.types, Freq != 0)
+# Assuming filtered_df is your filtered dataframe
+filtered_df$Var1 <- droplevels(filtered_df$Var1)
+cell.order <- filtered_df$Var1
+
+cell.order <- as.character(cell.order[order(tolower(cell.order))])
+
+DimPlot(seu.q, group.by = "rfm.pred", raster = FALSE, label = TRUE, pt.size = 0.1, order = rev(cell.order))
+
+
+
+```
+
+
+
+```{r}
+
+Idents(seu.q) <- "rfm.pred"
+png("UMAP_RFM_All_S13.png", width = 900, height = 350)
+DimPlot(seu.q, order = rev(cell.order), raster = FALSE, label = TRUE, pt.size = 0.001, shuffle = TRUE, repel = TRUE, label.size = 6) +
+  theme(legend.text = element_text(size=16), axis.title.y = element_text(size=16), 
+         axis.title.x = element_text(size=16), axis.text.y = element_text(size =16),
+        axis.text.x = element_text(size =16))
+dev.off()
+```
+
+
 
 
 Seurat label transfer
@@ -282,16 +361,26 @@ seu.q <- seurat_predict(seu.q, seu.r, ref_id = 'labels',
                            down.sample = 500, 
                         markers)
 
-DimPlot(seu.q, group.by = 'seu.pred', raster = FALSE, label = TRUE) + theme_classic(base_size = 15)
-setwd("~/Documents/Data/FlowCytometry/PhenoID/Analysis/NatMethodJuneSubmission/Figure4")
- png("UMAP_seurat_predictionsLB.png", width = 800, height = 400)
-DimPlot(seu.q, group.by = 'seu.pred', raster = FALSE, label = TRUE, 
-        repel = TRUE, label.size = 5.5) + theme_classic(base_size = 20)
- dev.off()
 
+DimPlot(seu.q, group.by = 'seu.pred', raster = FALSE, label = TRUE) + theme_classic(base_size = 15)
  
 
 ```
+
+```{r}
+
+Idents(seu.q) <- "seu.pred"
+
+png("UMAP_SUE_All_S13.png", width = 900, height = 350)
+DimPlot(seu.q, raster = FALSE, label = TRUE, pt.size = 0.001, shuffle = TRUE, repel = TRUE, label.size = 6) +
+  theme(legend.text = element_text(size=16), axis.title.y = element_text(size=16), 
+         axis.title.x = element_text(size=16), axis.text.y = element_text(size =16),
+        axis.text.x = element_text(size =16))
+dev.off()
+
+```
+
+
 
 
 Barchart of the  number of cell predicted in each cluster
@@ -338,39 +427,34 @@ write.csv(an.df,"TopPredCon.csv")
 ```
 Add annotations
 
-```{r, fig.width=4}
 
-cluster.ids <- c("Glia-lineage","Radial Glia 1a","Radial Glia 1",
-                 "Radial Glia 3","Neurons 1", #4
-                 "Radial Glia 2","Epithelial","Radial Glia 1",
-                 "Neurons 1","Radial Glia 1",    #9
-                 "Astrocytes 2","Neural-lineage","Endothelial",
-                 "Radial Glia 1a","Neurons 1", #14
-                 "Astrocytes 1","NPC","Neurons 2","Neurons 2",
-                 "Astrocytes 1", #19
-                 "Neurons 2","Astrocytes 1","OPC-like","Astrocytes 1","OPC-like", #24
-                 "Radial Glia 1","Astrocytes 1","Neurons 2","Oligodendrocytes","OPC",
-                 "Radial Glia 2","NPC","Astrocytes 2","Endothelial",
-                 "Stem cell like","Radial Glia 1")
-
-# note Neurons 3 is NPC
-
-
-seu.q <- CelltypeR::annotate(seu.q, annotations = cluster.ids, 
-                  to_label= "clusters", 
-                  annotation_name = "Annotations")
-
-DimPlot(seu.q,label = TRUE, repel = TRUE ,raster = FALSE,
-        label.size = 6)
-
-
-
+```{r}
+table(seu.q$clusters, seu.q$Annotations)
 ```
 
 
 
+```{r, fig.width=12}
 
-```{r, fig.width=4}
+Idents(seu.q) <- "clusters"
+levels(seu.q)
+
+
+
+# try RG 1 c7  needs to be RG 1
+# try astro 1 c23 as astrocytes 2
+main_celltypes <- c("Glia-lineage", "Radial Glia 1a","Radial Glia 1","Radial Glia 3","Neurons 1",                # 0-4
+                    "Radial Glia 2", "Epithelial","Radial Glia 1","Neurons 1", "Radial Glia 1",             #5-9
+                    "Astrocytes 2","Neural-lineage", "Endothelial","Radial Glia 1a", "Neurons 1",                  # 10-14
+                    "Astrocytes 1","NPC","Neurons 2","Neurons 2", "Astrocytes 1", "Neurons 2",                #15-20
+                    "Astrocytes 1","OPC-like","Astrocytes 2","OPC-like","Radial Glia 1",             #21-25
+                    "Astrocytes 1","Neurons 2","Oligodendrocytes","OPC","Radial Glia 2",            #26-30
+                    "NPC","Astrocytes 2","Endothelial","Stem cell like","Radial Glia 1a"                       # 31-35
+)
+seu.q <- CelltypeR::annotate(seu.q, main_celltypes, to_label = seu.q$clusters, annotation_name = "MainCelltypes" )
+
+
+#DimPlot(seu.q, group.by = "MainCelltypes" , raster = FALSE, label = TRUE)
 
 
 # order the cell types
@@ -394,10 +478,22 @@ clust.colours <- c("chocolate2","darkorange",
                    "tomato3","burlywood3")
  
 
-pdf("UMAP.all.groups.pdf",width = 9, height = 4.5)
-DimPlot(seu.q, cols = clust.colours, shuffle = TRUE, 
-        raster=FALSE, pt.size = 0.1, label = FALSE, 
-        group.by = 'Annotations',
+
+
+
+DimPlot(seu.q, cols = alpha(clust.colours, 0.7), shuffle = TRUE, raster=FALSE, pt.size = 0.1, label = TRUE, group.by = "MainCelltypes", order = rev(cell.order))
+
+
+```
+
+
+save figure 4A
+```{r}
+
+pdf("UMAPallcellsMay10.3.pdf",width = 15, height = 9)
+DimPlot(seu.q, cols = alpha(clust.colours,0.65), shuffle = TRUE, 
+        raster=FALSE, pt.size = 0.0001, label = FALSE, 
+        group.by = "MainCelltypes",
         order = rev(cell.order)) +
 theme(legend.text = element_text(size=16), axis.title.y = element_text(size=16), 
          axis.title.x = element_text(size=16), axis.text.y = element_text(size =16),
@@ -405,13 +501,8 @@ theme(legend.text = element_text(size=16), axis.title.y = element_text(size=16),
 dev.off()
 
 
-DimPlot(seu.q, cols = clust.colours, shuffle = TRUE, 
-        raster=FALSE, pt.size = 0.1, label = TRUE, 
-        group.by = 'Annotations',
-        order = rev(cell.order))
-
-
 ```
+
 
 
 Make a dot plot of expression in full dataset
@@ -496,14 +587,14 @@ unique(seu.q$Batch)  # change the meta data to each in turn.
 
 Run split UMAP - split by iPSC line
 
-```{r, fig.width=10}
+```{r, fig.width=15}
 
 # cell order from above
 # colours from above
 
 # to change the order of the plots for the split by 
 # to do that we need to factor the levels
-seu.q$IPSC <- factor(seu.q$IPSC, levels = c("AIW002","AJG001","3450"))
+#seu.q$IPSC <- factor(seu.q$IPSC, levels = c("AIW002","AJG001","3450"))
 
 
 # save the plot
@@ -525,6 +616,24 @@ DimPlot(seu.q, cols = clust.colours, shuffle = TRUE,
         order = rev(cell.order), split.by = "IPSC")
 
 ```
+
+Save for Figure 4C - split by IPSC line
+```{r}
+png("UMAPsplitbyIPSClineMay10.png",width = 3000, height = 800)
+#pdf("UMAPsplitbyIPSClineMay10.pdf",width = 22, height = 6)
+DimPlot(seu.q, cols = alpha(clust.colours,0.65), shuffle = TRUE, 
+        raster=FALSE, pt.size = 0.0001, label = FALSE, 
+        group.by = 'Annotations',
+        order = rev(cell.order), split.by = "IPSC") +
+theme(legend.text = element_text(size=16), axis.title.y = element_text(size=16), 
+         axis.title.x = element_text(size=16), axis.text.y = element_text(size =16),
+        axis.text.x = element_text(size =16))
+dev.off()
+
+
+```
+
+
 
 
 Plot the proportions of cell types
